run first scraping and save file

--- a/auction_scraping_prototype.ipynb
+++ b/auction_scraping_prototype.ipynb
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "46521f77-433b-49aa-8642-bbbaa3040f3c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
     "import urllib3\n",
     "import json\n",
     "from itertools import chain\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "95c314ed-2c98-4b0f-b2fc-ea7c26e4f363",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "43315873-f43e-48da-966b-9c2726231f1d",
    "metadata": {},
    "outputs": [],
@@ -976,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "id": "18779812-265d-4da6-a4d5-368cac3dcc42",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "516a0a51-e161-4ccd-85ef-87aa5c510970",
    "metadata": {},
    "outputs": [
@@ -1018,19 +1019,33 @@
      "output_type": "stream",
      "text": [
       "Scraping data for page 0\n",
+      "100\n",
       "Scraping data for page 1\n",
+      "100\n",
       "Scraping data for page 2\n",
+      "100\n",
       "Scraping data for page 3\n",
+      "100\n",
       "Scraping data for page 4\n",
+      "100\n",
       "Scraping data for page 5\n",
+      "100\n",
       "Scraping data for page 6\n",
+      "100\n",
       "Scraping data for page 7\n",
+      "100\n",
       "Scraping data for page 8\n",
+      "100\n",
       "Scraping data for page 9\n",
+      "100\n",
       "Scraping data for page 10\n",
+      "100\n",
       "Scraping data for page 11\n",
+      "100\n",
       "Scraping data for page 12\n",
+      "55\n",
       "Scraping data for page 13\n",
+      "0\n",
       "No items scraped for page 13\n"
      ]
     }
@@ -1048,7 +1063,7 @@
     "        response = req.request('GET', url)\n",
     "        soup = BeautifulSoup(response.data, 'html.parser')\n",
     "        scraped_table = extract_lots_table_from_soup(soup)\n",
-    "        print(len(scraped_table))\n",
+    "        # print(len(scraped_table))\n",
     "        if len(scraped_table):\n",
     "            scraped_tables.append(scraped_table)\n",
     "        else:\n",
@@ -1058,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "id": "ab44a72a-0246-494f-9c1a-9bc1f0960656",
    "metadata": {},
    "outputs": [],
@@ -1069,7 +1084,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
+   "id": "8cc9870d-7c34-43bc-9605-490e5914e980",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scraping_date = datetime.datetime.today().date()\n",
+    "lots_df.to_csv(f'mesa_scraped_tables/lots_{scraping_date}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "d9b794e5-494b-4d39-92e2-6d3bd27e789a",
    "metadata": {
     "tags": []
@@ -1163,45 +1189,45 @@
       "quantity ------------------------------------------------------------------------------------------------------------------------------------------------------\n",
       "[1.]\n",
       "bidCount ------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "[ 2  7  4  1  3  9  0  5  8 10 11  6 15 13 16 14 17 12 20 21 24]\n",
+      "[ 2  7  4  1  3  9  6  8  5 10 11  0 15 13 16 14 17 12 20 21 24]\n",
       "minBid ------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "[  7.5  20.   12.5   5.   10.   30.    2.5  17.5  15.   22.5  25.   35.\n",
+      "[  7.5  20.   12.5   5.   10.   30.   17.5  22.5  15.   25.   35.    2.5\n",
       "  70.   45.   60.   80.   40.   50.  225.  100.  130.  120.  140.  275. ]\n",
       "highBid ------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "[  5.   17.5  10.    2.5   7.5  25.    0.   15.   12.5  20.   22.5  30.\n",
+      "[  5.   17.5  10.    2.5   7.5  25.   15.   20.   12.5  22.5  30.    0.\n",
       "  60.   40.   50.   70.   35.   45.  200.   90.  120.  110.  130.  250. ]\n",
       "highBuyerId ------------------------------------------------------------------------------------------------------------------------------------------------------\n",
       "['6945586' '6517913' '2798122' '5314222' '6632259' '6284220' '6949600'\n",
-      " '6910321' '0' '6900726' '6766337' '6776867' '5268298' '6914894' '6924943'\n",
-      " '4741567' '6869993' '6358718' '1296575' '5508499' '6635889' '3407243'\n",
-      " '5768763' '6926601' '6079872' '6849545' '6939286' '5670589' '4299113'\n",
-      " '6540419' '1043206' '5386409' '6262527' '6397586' '6500081' '6556539'\n",
-      " '5783923' '6321290' '6340143' '6670538' '6339434' '5897077' '5772689'\n",
-      " '6746771' '5364042' '2156295' '6516938' '6245885' '6810897' '6948597'\n",
+      " '6910321' '6923635' '6900726' '6766337' '6776867' '5268298' '6924943'\n",
+      " '4741567' '6262527' '6358718' '1296575' '5508499' '6635889' '3407243'\n",
+      " '5768763' '6926601' '6079872' '6849545' '6914894' '6939286' '5670589'\n",
+      " '4299113' '6540419' '1043206' '0' '5386409' '6397586' '6500081' '6556539'\n",
+      " '5783923' '6321290' '6340143' '6670538' '6339434' '6698210' '5897077'\n",
+      " '5772689' '6746771' '5364042' '2156295' '6516938' '6245885' '6810897'\n",
       " '6077572' '6639804' '6683172' '6579247' '6653738' '5464376' '6915140'\n",
-      " '2630249' '6135047' '4361837' '6812042' '6947371' '6696931' '6923635'\n",
-      " '6340263' '5905074' '6944662' '6571513' '6422044' '6765494' '6654022'\n",
-      " '6579313' '6598101' '5403368' '2729293' '5684881' '6381812' '6309555'\n",
-      " '3108067' '6361058' '3341196' '6891690' '6949206' '6539790' '6154842'\n",
-      " '3908737' '6722324' '5236068' '4532814' '6887237' '5383450' '6178348'\n",
+      " '2630249' '6135047' '4361837' '6812042' '6947371' '6696931' '6340263'\n",
+      " '5905074' '6944662' '6948597' '6422044' '6765494' '6654022' '6579313'\n",
+      " '6598101' '5403368' '2729293' '5684881' '6381812' '6309555' '3108067'\n",
+      " '6361058' '3341196' '6891690' '6949206' '6539790' '6154842' '3908737'\n",
+      " '6722324' '5236068' '4532814' '6887237' '5383450' '6571513' '6178348'\n",
       " '1295818' '6943543' '1238439' '2624325' '3020385' '5720547' '6360732'\n",
-      " '6538562' '4226569' '6343750' '181363' '6191141' '5711557' '6945625'\n",
-      " '6883896' '6941910' '1946643' '6763885' '6782959' '5671242' '6261695'\n",
-      " '5936748' '5365943' '3026554' '6403722' '5878440' '6872987' '1380777'\n",
-      " '6713369' '5365435' '5980035' '5587837' '5951518' '6714750' '3957224'\n",
-      " '6461506' '6696504' '6949754' '6905425' '6928728' '3528481' '6778771'\n",
-      " '5916714' '5884973' '5531751' '5769282' '6909363' '6885260' '6670826'\n",
-      " '6660004' '6946839' '6190074' '6438809' '6499745' '6282896' '6924385'\n",
-      " '5470008' '6598331' '6710360' '5383330' '6734209' '6284873' '6249473'\n",
-      " '6090624' '3334342' '6907789' '2364603' '5345825' '3123449' '6904471'\n",
-      " '6941790' '6211824' '6745412' '6174304' '6520523' '5325567' '817143'\n",
-      " '6698210' '6365371' '5504331' '6944544' '6640450' '5550687' '5859994'\n",
-      " '5788076' '6816643' '6617983' '6439936' '5984741' '6463981' '5546831'\n",
-      " '5386281' '5277660' '6616231' '6942270' '6442693' '1564929' '6799202'\n",
-      " '3029774' '6176885' '1962785' '3095366' '6946815' '6536805' '5324682'\n",
-      " '6306722' '6941560' '5942540' '6443372' '6931645' '5365670' '670180'\n",
-      " '2796695' '6709217' '6892253' '5798565' '6585120' '5502382' '6486486'\n",
-      " '6908975' '6778646' '6656528' '6320413']\n",
+      " '951029' '4226569' '6343750' '181363' '6191141' '6001404' '5711557'\n",
+      " '6945625' '6883896' '6941910' '1946643' '6763885' '6782959' '5671242'\n",
+      " '6261695' '5936748' '5365943' '3026554' '6403722' '5878440' '6872987'\n",
+      " '1380777' '6713369' '5365435' '5980035' '5587837' '5951518' '6714750'\n",
+      " '3957224' '6461506' '6696504' '6949754' '6905425' '6928728' '3528481'\n",
+      " '5932251' '6778771' '5916714' '5884973' '5531751' '5769282' '6909363'\n",
+      " '6885260' '6670826' '6660004' '6946839' '6190074' '6438809' '6499745'\n",
+      " '6924385' '5470008' '6598331' '6710360' '5383330' '6734209' '6284873'\n",
+      " '6249473' '6090624' '3334342' '6907789' '2364603' '5345825' '3123449'\n",
+      " '6904471' '6941790' '6211824' '6745412' '6174304' '6520523' '5325567'\n",
+      " '817143' '6282896' '6365371' '5504331' '6944544' '6640450' '5550687'\n",
+      " '5859994' '5788076' '5916237' '6816643' '6617983' '6439936' '5984741'\n",
+      " '6463981' '5546831' '5386281' '5277660' '6616231' '6942270' '6442693'\n",
+      " '1564929' '6799202' '3029774' '6176885' '1962785' '3095366' '6946815'\n",
+      " '6536805' '5324682' '6306722' '6941560' '5942540' '6538562' '6443372'\n",
+      " '6931645' '5365670' '670180' '2796695' '6709217' '6892253' '5798565'\n",
+      " '6585120' '5502382' '6486486' '6908975' '6778646' '6656528' '6320413']\n",
       "bidType ------------------------------------------------------------------------------------------------------------------------------------------------------\n",
       "[3]\n",
       "bidAmountType ------------------------------------------------------------------------------------------------------------------------------------------------------\n",
